--- a/app/css/default.css
+++ b/app/css/default.css
@@ -6,7 +6,7 @@
     -webkit-app-region: drag;
 }
 
-#button__minimize-window {
+#button__close-window {
     padding-right: 10px;
 }
 
@@ -44,10 +44,11 @@
 
 .ignored--other-navigation-title {
     position: absolute;
-    top: 52px;
+    top: 57px;
     text-align: center;
     width: 100%;
     color: lightcyan;
+    font-size: 1.8rem;
 }
 
 #page__ignored,
@@ -66,4 +67,11 @@
 
 .item__ignored-file:hover {
     background-color: rgba(255, 53, 53, 0.5);
+}
+
+#button__exit {
+    position: fixed;
+    bottom: 10px;
+    left: 0px;
+    opacity: 0.5;
 }
